// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<DividerLine /> > should match the snapshot 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_marginTop_3_mobile__onxwjuxv sprinkles_marginBottom_3_mobile__onxwjuub sprinkles_backgroundColor_shine__onxwju32 DividerLine_size_horizontal_2__k1y61r1"
  />
</div>
`;

exports[`<DividerLine /> > should match the snapshot as vertical 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_marginLeft_3_mobile__onxwjuvf sprinkles_marginRight_3_mobile__onxwjuwn sprinkles_backgroundColor_shine__onxwju32 DividerLine_size_vertical_2__k1y61r4"
  />
</div>
`;
